@@ -17,6 +17,7 @@ V1.1.5 Friday, May 17 2013
  +Improved documentation for Actions.
  +Fix bug 88, Parcellite does not work with appindicator in Raring.
  +Fix bug 92, Ctrl-Shift/Right-Click followed by Clear produces SegFault/Double Free.
+ +Added Keyboard Input feature.
  
 V1.1.4 Saturday, January 19 2013
  Changes
